[package]
name = "mongo-rust-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"]}
warp = "0.3.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = "1.0.0"

#async-std = { version = "1", features = ["attributes", "tokio1"] }

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'